--- a/src/assets/design/index.css
+++ b/src/assets/design/index.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --header-height:70px;
+  --footer-height:70px;
+  --body-height:calc(100vh - var(--footer-height) - var(--header-height));
 }
 
 code {
