--- a/src/assets/design/style.css
+++ b/src/assets/design/style.css
@@ -10,10 +10,14 @@
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    --header-height:70px;
+    --footer-height:70px;
+    --body-height: calc(100vh - var(--header-height) - var(--footer-height));
+    
   }
   
   code {
