--- a/src/assets/design/tailwind.css
+++ b/src/assets/design/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .app-container{
-     @apply  w-[95%]  sm:w-[95%] lg:w-[95%] xl:w-[1280px] ; 
+     @apply mx-auto  w-[95%]  sm:w-[95%] lg:w-[95%] xl:w-[1280px] ; 
     }
     .btn-blue {
         @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
