--- a/src/assets/design/style.css
+++ b/src/assets/design/style.css
@@ -1,27 +1,77 @@
 @font-face {
-    font-family: 'SouthernAire';
-    src: url(../fonts/SouthernAire_Personal_Use_Only/SouthernAire_Personal_Use_Only.ttf) format('truetype');
+  font-family: 'SouthernAire';
+  src: url(../fonts/SouthernAire_Personal_Use_Only/SouthernAire_Personal_Use_Only.ttf) format('truetype');
 }
 @font-face {
-    font-family: 'Simplemade';
-    src: url(../fonts/Simplemade/SimplemadeFontDEMO-DEMO.ttf) format('truetype'),
-    url(../fonts/Simplemade/SimplemadeFontDEMO-DEMO.otf) format('otf');
+  font-family: 'Simplemade';
+  src: url(../fonts/Simplemade/SimplemadeFontDEMO-DEMO.ttf) format('truetype'),
+  url(../fonts/Simplemade/SimplemadeFontDEMO-DEMO.otf) format('otf');
 }
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 
-    --header-height:70px;
-    --footer-height:70px;
-    --body-height: calc(100vh - var(--header-height) - var(--footer-height));
-    
-  }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.125rem/* 18px */;
+  line-height: 1.75rem/* 28px */;
+  color:white;
+
+
+  --header-height:70px;
+  --footer-height:70px;
+  --body-height: calc(100vh - var(--header-height) - var(--footer-height));
   
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .app-container{
+     @apply mx-auto  w-[95%]  sm:w-[95%] lg:w-[95%] xl:w-[1280px] ; 
+    }
+    .btn-blue {
+        @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+    }
+}
+@layer base {
+  .h2 {
+    @apply  text-[32px] mb-6 tracking-[10%] uppercase;
   }
+  .h3 {
+    @apply font-semibold text-[26px] mb-6 leading-[46px];
+  }
+  .btn {
+    @apply rounded-full font-primary text-white font-medium;
+  }
+  .btn-sm {
+    @apply h-[48px] px-6 text-sm;
+  }
+  .btn-lg {
+    @apply h-[56px] px-10 text-base;
+  }
+  .btn-link {
+    @apply text-base;
+  }
+  .text-gradient {
+    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
+  }
+  .section {
+    @apply py-8 lg:py-24 lg:h-screen flex items-center;
+  }
+}
+
+
+
+
   
